Move the project_6 (shopping cart) into HTML5 [article, sections, header]

--- a/project_6.html
+++ b/project_6.html
@@ -42,277 +42,284 @@
   </header>
 
     <!-- PROJECT CONTENT -->
-  <div id="wrapper">
-    <div class="ribbon"><span>Fashion</span></div>
-    <h1>Products List</h1>
+  <article id="wrapper">
+    <section id="products">
+      <header>
+        <div class="ribbon"><span>Fashion</span></div>
+        <h1>Products List</h1>
+      </header>
       <div id="products-wrapper">
-        <div class="section">
-          <span class="thumb">
-            <img src="images/278x278.png">
-          </span>
-          <div class="sectionContainer">
-            <div class="price">
-              Price: $10.00
-              <div class="addToCart">
-                <span>Add to Cart</span>
+          <div class="section">
+            <span class="thumb">
+              <img src="images/278x278.png">
+            </span>
+            <div class="sectionContainer">
+              <div class="price">
+                Price: $10.00
+                <div class="addToCart">
+                  <span>Add to Cart</span>
+                </div>
+              </div>
+              <div class="title">
+                Product Title
+              </div>
+              <div class="product-description">
+                <p class="product-description__paragraph">
+                Lorem ipsum dolor sit amet, consectetuer adipiscing elit. 
+                Aenean commodo ligula eget dolor. Aenean massa.
+                </p>
               </div>
             </div>
-            <div class="title">
-              Product Title
-            </div>
-            <div class="product-description">
-              <p class="product-description__paragraph">
-              Lorem ipsum dolor sit amet, consectetuer adipiscing elit. 
-              Aenean commodo ligula eget dolor. Aenean massa.
-              </p>
-            </div>
           </div>
-        </div>
-        <div class="section">
-          <span class="thumb">
-            <img src="images/278x278.png">
-          </span>
-          <div class="sectionContainer">
-            <div class="price">
-              Price: $8.00
-              <div class="addToCart">
-                <span>Add to Cart</span>
+          <div class="section">
+            <span class="thumb">
+              <img src="images/278x278.png">
+            </span>
+            <div class="sectionContainer">
+              <div class="price">
+                Price: $8.00
+                <div class="addToCart">
+                  <span>Add to Cart</span>
+                </div>
+              </div>
+              <div class="title">
+                Product Title
+              </div>
+              <div class="product-description">
+                <p class="product-description__paragraph">
+                Lorem ipsum dolor sit amet, consectetuer adipiscing elit. 
+                Aenean commodo ligula eget dolor. Aenean massa.
+                </p>
               </div>
             </div>
-            <div class="title">
-              Product Title
-            </div>
-            <div class="product-description">
-              <p class="product-description__paragraph">
-              Lorem ipsum dolor sit amet, consectetuer adipiscing elit. 
-              Aenean commodo ligula eget dolor. Aenean massa.
-              </p>
-            </div>
           </div>
-        </div>
-        <div class="section rightMostSection">
-          <span class="thumb">
-            <img src="images/278x278.png">
-          </span>
-          <div class="sectionContainer">
-            <div class="price">
-              Price: $135.00
-              <div class="addToCart">
-                <span>Add to Cart</span>
+          <div class="section rightMostSection">
+            <span class="thumb">
+              <img src="images/278x278.png">
+            </span>
+            <div class="sectionContainer">
+              <div class="price">
+                Price: $135.00
+                <div class="addToCart">
+                  <span>Add to Cart</span>
+                </div>
+              </div>
+              <div class="title">
+                Product Title
+              </div>
+              <div class="product-description">
+                <p class="product-description__paragraph">
+                Lorem ipsum dolor sit amet, consectetuer adipiscing elit. 
+                Aenean commodo ligula eget dolor. Aenean massa.Ì
+                </p>
               </div>
             </div>
-            <div class="title">
-              Product Title
-            </div>
-            <div class="product-description">
-              <p class="product-description__paragraph">
-              Lorem ipsum dolor sit amet, consectetuer adipiscing elit. 
-              Aenean commodo ligula eget dolor. Aenean massa.Ì
-              </p>
+          </div>
+          <div class="section">
+            <span class="thumb">
+              <img src="images/278x278.png">
+            </span>
+            <div class="sectionContainer">
+              <div class="price">
+                Price: $1.00
+                <div class="addToCart">
+                  <span>Add to Cart</span>
+                </div>
+              </div>
+              <div class="title">
+                Product Title
+              </div>
+              <div class="product-description">
+                <p class="product-description__paragraph">
+                Lorem ipsum dolor sit amet, consectetuer adipiscing elit. 
+                Aenean commodo ligula eget dolor. Aenean massa.
+                </p>
+              </div>            
             </div>
           </div>
-        </div>
-        <div class="section">
-          <span class="thumb">
-            <img src="images/278x278.png">
-          </span>
-          <div class="sectionContainer">
-            <div class="price">
-              Price: $1.00
-              <div class="addToCart">
-                <span>Add to Cart</span>
+          <div class="section">
+            <span class="thumb">
+              <img src="images/278x278.png">
+            </span>
+            <div class="sectionContainer">
+              <div class="price">
+                Price: $10.00
+                <div class="addToCart">
+                  <span>Add to Cart</span>
+                </div>
+              </div>
+              <div class="title">
+                Product Title
+              </div>
+              <div class="product-description">
+                <p class="product-description__paragraph">
+                Lorem ipsum dolor sit amet, consectetuer adipiscing elit. 
+                Aenean commodo ligula eget dolor. Aenean massa.
+                </p>
               </div>
             </div>
-            <div class="title">
-              Product Title
-            </div>
-            <div class="product-description">
-              <p class="product-description__paragraph">
-              Lorem ipsum dolor sit amet, consectetuer adipiscing elit. 
-              Aenean commodo ligula eget dolor. Aenean massa.
-              </p>
-            </div>            
           </div>
-        </div>
-        <div class="section">
-          <span class="thumb">
-            <img src="images/278x278.png">
-          </span>
-          <div class="sectionContainer">
-            <div class="price">
-              Price: $10.00
-              <div class="addToCart">
-                <span>Add to Cart</span>
+          <div class="section rightMostSection">
+            <span class="thumb">
+              <img src="images/278x278.png">
+            </span>
+            <div class="sectionContainer">
+              <div class="price">
+                Price: $20.00
+                <div class="addToCart">
+                  <span>Add to Cart</span>
+                </div>
+              </div>
+              <div class="title">
+                Product Title
+              </div>
+              <div class="product-description">
+                <p class="product-description__paragraph">
+                Lorem ipsum dolor sit amet, consectetuer adipiscing elit. 
+                Aenean commodo ligula eget dolor. Aenean massa.
+                </p>
               </div>
             </div>
-            <div class="title">
-              Product Title
-            </div>
-            <div class="product-description">
-              <p class="product-description__paragraph">
-              Lorem ipsum dolor sit amet, consectetuer adipiscing elit. 
-              Aenean commodo ligula eget dolor. Aenean massa.
-              </p>
-            </div>
           </div>
-        </div>
-        <div class="section rightMostSection">
-          <span class="thumb">
-            <img src="images/278x278.png">
-          </span>
-          <div class="sectionContainer">
-            <div class="price">
-              Price: $20.00
-              <div class="addToCart">
-                <span>Add to Cart</span>
+          <div class="section">
+            <span class="thumb">
+              <img src="images/278x278.png">
+            </span>
+            <div class="sectionContainer">
+              <div class="price">
+                Price: $310.00
+                <div class="addToCart">
+                  <span>Add to Cart</span>
+                </div>
+              </div>
+              <div class="title">
+                Product Title
+              </div>
+              <div class="product-description">
+                <p class="product-description__paragraph">
+                Lorem ipsum dolor sit amet, consectetuer adipiscing elit. 
+                Aenean commodo ligula eget dolor. Aenean massa.
+                </p>
               </div>
             </div>
-            <div class="title">
-              Product Title
-            </div>
-            <div class="product-description">
-              <p class="product-description__paragraph">
-              Lorem ipsum dolor sit amet, consectetuer adipiscing elit. 
-              Aenean commodo ligula eget dolor. Aenean massa.
-              </p>
-            </div>
           </div>
-        </div>
-        <div class="section">
-          <span class="thumb">
-            <img src="images/278x278.png">
-          </span>
-          <div class="sectionContainer">
-            <div class="price">
-              Price: $310.00
-              <div class="addToCart">
-                <span>Add to Cart</span>
+          <div class="section">
+            <span class="thumb">
+              <img src="images/278x278.png">
+            </span>
+            <div class="sectionContainer">
+              <div class="price">
+                Price: $130.00
+                <div class="addToCart">
+                  <span>Add to Cart</span>
+                </div>
+              </div>
+              <div class="title">
+                Product Title
+              </div>
+              <div class="product-description">
+                <p class="product-description__paragraph">
+                Lorem ipsum dolor sit amet, consectetuer adipiscing elit. 
+                Aenean commodo ligula eget dolor. Aenean massa.
+                </p>
               </div>
             </div>
-            <div class="title">
-              Product Title
-            </div>
-            <div class="product-description">
-              <p class="product-description__paragraph">
-              Lorem ipsum dolor sit amet, consectetuer adipiscing elit. 
-              Aenean commodo ligula eget dolor. Aenean massa.
-              </p>
-            </div>
           </div>
-        </div>
-        <div class="section">
-          <span class="thumb">
-            <img src="images/278x278.png">
-          </span>
-          <div class="sectionContainer">
-            <div class="price">
-              Price: $130.00
-              <div class="addToCart">
-                <span>Add to Cart</span>
+          <div class="section rightMostSection">
+            <span class="thumb">
+              <img src="images/278x278.png">
+            </span>
+            <div class="sectionContainer">
+              <div class="price">
+                Price: $5.00
+                <div class="addToCart">
+                  <span>Add to Cart</span>
+                </div>
+              </div>
+              <div class="title">
+                Product Title
+              </div>
+              <div class="product-description">
+                <p class="product-description__paragraph">
+                Lorem ipsum dolor sit amet, consectetuer adipiscing elit. 
+                Aenean commodo ligula eget dolor. Aenean massa.
+                </p>
               </div>
             </div>
-            <div class="title">
-              Product Title
-            </div>
-            <div class="product-description">
-              <p class="product-description__paragraph">
-              Lorem ipsum dolor sit amet, consectetuer adipiscing elit. 
-              Aenean commodo ligula eget dolor. Aenean massa.
-              </p>
-            </div>
           </div>
-        </div>
-        <div class="section rightMostSection">
-          <span class="thumb">
-            <img src="images/278x278.png">
-          </span>
-          <div class="sectionContainer">
-            <div class="price">
-              Price: $5.00
-              <div class="addToCart">
-                <span>Add to Cart</span>
+          <div class="section">
+            <span class="thumb">
+              <img src="images/278x278.png">
+            </span>
+            <div class="sectionContainer">
+              <div class="price">
+                Price: $101.00
+                <div class="addToCart">
+                  <span>Add to Cart</span>
+                </div>
+              </div>
+              <div class="title">
+                Product Title
+              </div>
+              <div class="product-description">
+                <p class="product-description__paragraph">
+                Lorem ipsum dolor sit amet, consectetuer adipiscing elit. 
+                Aenean commodo ligula eget dolor. Aenean massa.
+                </p>
               </div>
             </div>
-            <div class="title">
-              Product Title
-            </div>
-            <div class="product-description">
-              <p class="product-description__paragraph">
-              Lorem ipsum dolor sit amet, consectetuer adipiscing elit. 
-              Aenean commodo ligula eget dolor. Aenean massa.
-              </p>
-            </div>
           </div>
-        </div>
-        <div class="section">
-          <span class="thumb">
-            <img src="images/278x278.png">
-          </span>
-          <div class="sectionContainer">
-            <div class="price">
-              Price: $101.00
-              <div class="addToCart">
-                <span>Add to Cart</span>
+          <div class="section">
+            <span class="thumb">
+              <img src="images/278x278.png">
+            </span>
+            <div class="sectionContainer">
+              <div class="price">
+                Price: $45.00
+                <div class="addToCart">
+                  <span>Add to Cart</span>
+                </div>
+              </div>
+              <div class="title">
+                Product Title
+              </div>
+              <div class="product-description">
+                <p class="product-description__paragraph">
+                Lorem ipsum dolor sit amet, consectetuer adipiscing elit. 
+                Aenean commodo ligula eget dolor. Aenean massa.
+                </p>
               </div>
             </div>
-            <div class="title">
-              Product Title
-            </div>
-            <div class="product-description">
-              <p class="product-description__paragraph">
-              Lorem ipsum dolor sit amet, consectetuer adipiscing elit. 
-              Aenean commodo ligula eget dolor. Aenean massa.
-              </p>
-            </div>
           </div>
-        </div>
-        <div class="section">
-          <span class="thumb">
-            <img src="images/278x278.png">
-          </span>
-          <div class="sectionContainer">
-            <div class="price">
-              Price: $45.00
-              <div class="addToCart">
-                <span>Add to Cart</span>
+          <div class="section">
+            <span class="thumb">
+              <img src="images/278x278.png">
+            </span>
+            <div class="sectionContainer rightMostSection">
+              <div class="price">
+                Price: $10.00
+                <div class="addToCart">
+                  <span>Add to Cart</span>
+                </div>
+              </div>
+              <div class="title">
+                Product Title
+              </div>
+              <div class="product-description">
+                <p class="product-description__paragraph">
+                Lorem ipsum dolor sit amet, consectetuer adipiscing elit. 
+                Aenean commodo ligula eget dolor. Aenean massa.
+                </p>
               </div>
             </div>
-            <div class="title">
-              Product Title
-            </div>
-            <div class="product-description">
-              <p class="product-description__paragraph">
-              Lorem ipsum dolor sit amet, consectetuer adipiscing elit. 
-              Aenean commodo ligula eget dolor. Aenean massa.
-              </p>
-            </div>
           </div>
-        </div>
-        <div class="section">
-          <span class="thumb">
-            <img src="images/278x278.png">
-          </span>
-          <div class="sectionContainer rightMostSection">
-            <div class="price">
-              Price: $10.00
-              <div class="addToCart">
-                <span>Add to Cart</span>
-              </div>
-            </div>
-            <div class="title">
-              Product Title
-            </div>
-            <div class="product-description">
-              <p class="product-description__paragraph">
-              Lorem ipsum dolor sit amet, consectetuer adipiscing elit. 
-              Aenean commodo ligula eget dolor. Aenean massa.
-              </p>
-            </div>
-          </div>
-        </div>
       </div>
+    </section>
     <!-- Cart Section -->
-    <h1 class="cartTitle">Cart details</h1>
+    <section id="cart">
+      <header>
+        <h1 class="cartTitle">Cart details</h1>
+      </header>
       <div id="cart-wrapper">
         <div class="cartSteps">
           <a class="current">Step 1</a>
@@ -418,7 +425,8 @@
           </span>
         </div>
       </div>
-  </div>
+    </section>
+  </article>
 
 </body>
 </html>
