Enumerate products' title

--- a/project_6.html
+++ b/project_6.html
@@ -61,7 +61,7 @@
                 </div>
               </div>
               <div class="title">
-                Product Title
+                Product 1
               </div>
               <div class="product-description">
                 <p class="product-description__paragraph">
@@ -83,7 +83,7 @@
                 </div>
               </div>
               <div class="title">
-                Product Title
+                Product 2
               </div>
               <div class="product-description">
                 <p class="product-description__paragraph">
@@ -105,7 +105,7 @@
                 </div>
               </div>
               <div class="title">
-                Product Title
+                Product 3
               </div>
               <div class="product-description">
                 <p class="product-description__paragraph">
@@ -127,7 +127,7 @@
                 </div>
               </div>
               <div class="title">
-                Product Title
+                Product 4
               </div>
               <div class="product-description">
                 <p class="product-description__paragraph">
@@ -149,7 +149,7 @@
                 </div>
               </div>
               <div class="title">
-                Product Title
+                Product 5
               </div>
               <div class="product-description">
                 <p class="product-description__paragraph">
@@ -171,7 +171,7 @@
                 </div>
               </div>
               <div class="title">
-                Product Title
+                Product 6
               </div>
               <div class="product-description">
                 <p class="product-description__paragraph">
@@ -193,7 +193,7 @@
                 </div>
               </div>
               <div class="title">
-                Product Title
+                Product 7
               </div>
               <div class="product-description">
                 <p class="product-description__paragraph">
@@ -215,7 +215,7 @@
                 </div>
               </div>
               <div class="title">
-                Product Title
+                Product 8
               </div>
               <div class="product-description">
                 <p class="product-description__paragraph">
@@ -237,7 +237,7 @@
                 </div>
               </div>
               <div class="title">
-                Product Title
+                Product 9
               </div>
               <div class="product-description">
                 <p class="product-description__paragraph">
@@ -259,7 +259,7 @@
                 </div>
               </div>
               <div class="title">
-                Product Title
+                Product 10
               </div>
               <div class="product-description">
                 <p class="product-description__paragraph">
@@ -281,7 +281,7 @@
                 </div>
               </div>
               <div class="title">
-                Product Title
+                Product 11
               </div>
               <div class="product-description">
                 <p class="product-description__paragraph">
@@ -303,7 +303,7 @@
                 </div>
               </div>
               <div class="title">
-                Product Title
+                Product 12
               </div>
               <div class="product-description">
                 <p class="product-description__paragraph">
