--- a/project_6.html
+++ b/project_6.html
@@ -57,7 +57,7 @@
               <div class="price">
                 Price: $10.00
                 <div class="addToCart">
-                  <span>Add to Cart</span>
+                  <span data-product-price="10">Add to Cart</span>
                 </div>
               </div>
               <div class="title">
@@ -79,7 +79,7 @@
               <div class="price">
                 Price: $8.00
                 <div class="addToCart">
-                  <span>Add to Cart</span>
+                  <span data-product-price="8">Add to Cart</span>
                 </div>
               </div>
               <div class="title">
@@ -101,7 +101,7 @@
               <div class="price">
                 Price: $135.00
                 <div class="addToCart">
-                  <span>Add to Cart</span>
+                  <span data-product-price="135">Add to Cart</span>
                 </div>
               </div>
               <div class="title">
@@ -123,7 +123,7 @@
               <div class="price">
                 Price: $1.00
                 <div class="addToCart">
-                  <span>Add to Cart</span>
+                  <span data-product-price="1">Add to Cart</span>
                 </div>
               </div>
               <div class="title">
@@ -145,7 +145,7 @@
               <div class="price">
                 Price: $10.00
                 <div class="addToCart">
-                  <span>Add to Cart</span>
+                  <span data-product-price="10">Add to Cart</span>
                 </div>
               </div>
               <div class="title">
@@ -167,7 +167,7 @@
               <div class="price">
                 Price: $20.00
                 <div class="addToCart">
-                  <span>Add to Cart</span>
+                  <span data-product-price="20">Add to Cart</span>
                 </div>
               </div>
               <div class="title">
@@ -189,7 +189,7 @@
               <div class="price">
                 Price: $310.00
                 <div class="addToCart">
-                  <span>Add to Cart</span>
+                  <span data-product-price="310">Add to Cart</span>
                 </div>
               </div>
               <div class="title">
@@ -211,7 +211,7 @@
               <div class="price">
                 Price: $130.00
                 <div class="addToCart">
-                  <span>Add to Cart</span>
+                  <span data-product-price="130">Add to Cart</span>
                 </div>
               </div>
               <div class="title">
@@ -233,7 +233,7 @@
               <div class="price">
                 Price: $5.00
                 <div class="addToCart">
-                  <span>Add to Cart</span>
+                  <span data-product-price="5">Add to Cart</span>
                 </div>
               </div>
               <div class="title">
@@ -255,7 +255,7 @@
               <div class="price">
                 Price: $101.00
                 <div class="addToCart">
-                  <span>Add to Cart</span>
+                  <span data-product-price="101">Add to Cart</span>
                 </div>
               </div>
               <div class="title">
@@ -277,7 +277,7 @@
               <div class="price">
                 Price: $45.00
                 <div class="addToCart">
-                  <span>Add to Cart</span>
+                  <span data-product-price="45">Add to Cart</span>
                 </div>
               </div>
               <div class="title">
@@ -299,7 +299,7 @@
               <div class="price">
                 Price: $10.00
                 <div class="addToCart">
-                  <span>Add to Cart</span>
+                  <span data-product-price="10">Add to Cart</span>
                 </div>
               </div>
               <div class="title">
